src/styles.scss
@use '@angular/material' as mat;
@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';


// Font Settings
// @import './assets/fonts/raleway/raleway';
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500&display=swap');
$custom-typography: mat.define-typography-config(
  $font-family: 'Raleway, sans-serif',
  $headline-5: mat.define-typography-level(32px, 48px, 700),
  $body-2: mat.define-typography-level(16px, 24px, 400)
);
// Override the typography in the core CSS.
// TODO(v15): As of v15 mat.legacy-core no longer includes default typography styles.
//  The following line adds:
//    1. Default typography styles for all components
//    2. Styles for typography hierarchy classes (e.g. .mat-headline-1)
//  If you specify typography styles for the components you use elsewhere, you should delete this line.
//  If you don't need the default component typographies but still want the hierarchy styles,
//  you can delete this line and instead use:
//    `@include mat.legacy-typography-hierarchy($custom-typography);`
@include mat.all-component-typographies($custom-typography);
@include mat.core();

// Color Settings
$rsvp-primary: mat.define-palette(mat.$teal-palette, 600);
$rsvp-accent: mat.define-palette(mat.$deep-purple-palette, 300);
$rsvp-warn: mat.define-palette(mat.$red-palette, 900);
$rsvp-theme: mat.define-light-theme($rsvp-primary, $rsvp-accent, $rsvp-warn);

@include mat.all-component-themes($rsvp-theme);

@import './assets/scss/bootstrap';

.text-error {
  color: mat.get-color-from-palette($rsvp-warn);
}

.text-grey {
  color: rgba(0, 0, 0, 0.54)
}

// poor solution to fix mat-select overlay background
.mdc-menu-surface {
  background-color: rgb(245 245 245);
}

.mat-mdc-snack-bar-handset {
  margin-bottom: env(safe-area-inset-bottom) !important;
}

html, body { height: 100%; }
body { margin: 0; font-family: 'Raleway', sans-serif; overflow-x: hidden; }
input { font-size: 16px;}

.active {
  color: mat.get-color-from-palette($rsvp-primary);
}

.mat-badge-medium .mat-badge-content {
  line-height: 20px;
}

.fab {
  @include media-breakpoint-up(sm) {
    bottom: 80px;
  }
  bottom: 72px;
  right:16px;
  z-index: 5;
}

.header-padding {
  @include media-breakpoint-up(sm) {
    padding-top: 64px;
  }
  padding-top: 56px;
}
.sticky-height {
  @include media-breakpoint-up(sm) {
    height: 64px;
  }
  height: 56px;
}

.bottom {
  --safe-area-inset-bottom: env(safe-area-inset-bottom);
  height: calc(56px + var(--safe-area-inset-bottom));
  .mat-toolbar {
    @include media-breakpoint-up(sm) {
      border-top-left-radius: 4px;
      border-top-right-radius: 4px;
    }
    @include mat.elevation(1);
    bottom: 0;
    position: fixed;
    top: unset !important;
    --safe-area-inset-bottom: env(safe-area-inset-bottom);
    height: calc(56px + var(--safe-area-inset-bottom));
  }
}

app-root {
  router-outlet+* {
    > .container,
    > .container-fluid {
        --safe-area-inset-right: env(safe-area-inset-right);
        --safe-area-inset-left: env(safe-area-inset-left);
        padding-right: calc(16px + var(--safe-area-inset-right));
        padding-left: calc(16px + var(--safe-area-inset-left));
        flex-grow: 1;
      mat-card {
        .header-icon {
          font-size: 40px;
          height: 40px;
          width: 40px;
        }
        .mat-mdc-card-header-text {
          overflow-x: hidden;
          mat-mdc-card-subtitle {
            overflow-x: hidden;
            text-overflow: ellipsis;
          }
        }
      }
      .img-wrapper {
        @include mat.elevation(1);
        border-radius: 4px;
        // height: 100%;
        img {
          border-radius: 4px;
          height: 100%;
          // object-fit: cover;
          max-width: 927px;
          width: 100%;
        }
      }
      .wrapper {
        @include mat.elevation(1);
        border-radius: 4px;
        display: flex;
        flex-direction: column;
      }
    }
  }
}

